--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,9 @@
       margin: 0;
       padding: 0;
       font-size: 16px;
-      overflow: hidden;  
-    }  
+      overflow: hidden;
+      background-color: #EAEAEA;
+    }
     p {
       margin: 0;
     }
@@ -29,15 +30,15 @@
       height: 100%;
       margin: 0;
       padding: 0;
-      overflow: hidden;    
+      overflow: hidden;
     }
     /* Responsive Styles */
     @media screen and (max-width: 767px) {
     }
-  
+
     @media screen and (max-width: 575px) {
     }
-  </style>  
+  </style>
 </head>
 <body>
   <app-root class="box"></app-root>
